tests/fixtures/invalid/min_bytes_str.py
# Cannot call min() with Bytes, Str
x = min(b"hello", "hello")
